test/features/errors/semantic/e1019_duplicate_binding.spl
# E1019: Duplicate Binding

Feature: E1019 - Duplicate Binding
  As a Simple compiler
  I want to detect duplicate variable bindings in patterns
  So that each binding is unique within a pattern

  Background:
    Given I have the Simple compiler

  Scenario: Duplicate binding in tuple pattern
    When I compile:
      '''
      fn test(pair: (i32, i32)):
        val (x, x) = pair  # Error: x bound twice
      '''
    Then I should see error E1019 at line 2
    And the error message should be "duplicate binding `{name}` in pattern"
    And the label should point to the duplicate binding
    And the help should suggest "each binding in a pattern must be unique"

  Scenario: Duplicate binding in struct pattern
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      fn test(p: Point):
        val Point(a, a) = p  # Error: a bound twice
      '''
    Then I should see error E1019 at line 6
    And the error should indicate duplicate binding "a"

  Scenario: Duplicate binding in match arm
    When I compile:
      '''
      fn test(opt: Option<i32>):
        match opt:
          Some(x) | None(x): x  # Error: x bound in both alternatives
      '''
    Then I should see error E1019 at line 3

  Scenario: Duplicate in nested pattern
    When I compile:
      '''
      fn test(nested: (i32, (i32, i32))):
        val (x, (x, y)) = nested  # Error: x bound twice
      '''
    Then I should see error E1019

  Scenario: Valid unique bindings in tuple
    When I compile:
      '''
      fn test(pair: (i32, i32)):
        val (x, y) = pair  # OK: different names
      '''
    Then compilation should succeed

  Scenario: Valid unique bindings in struct
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      fn test(p: Point):
        val Point(a, b) = p  # OK: different names
      '''
    Then compilation should succeed

  Scenario: Underscore is not a binding
    When I compile:
      '''
      fn test(triple: (i32, i32, i32)):
        val (_, x, _) = triple  # OK: _ can appear multiple times
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test(pair: (i32, i32)):
        val (x, x) = pair
      '''
    Then I should see error E1019
    And the error message should contain "중복된 바인딩"
